[tool.poetry]
name = "daipe-core"
version = "1.1.2"
description = "Daipe framework core"
readme = "README.md"
repository = "https://github.com/daipe-ai/daipe-core"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "daipecore", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyfony-bundles = "0.4.*"
injecta = "0.10.*"
logger-bundle = "^0.7.0"
console-bundle = ">=0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-fixme = "^1.1.1"
pep8-naming = "^0.11.1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"
logger-bundle = "^0.7.0"

[tool.poetry.scripts]
daipe = "consolebundle.CommandRunner:run_command"

[tool.poetry.plugins."pyfony.bundle"]
create = "daipecore.DaipeCore:DaipeCore"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "daipecore"

[tool.black]
line-length = 140

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
flake8 = "flake8 --ignore=E501,W503 src"
