[tool.poetry]
name = "daipe-core"
version = "1.4.4"
description = "Daipe framework core"
readme = "README.md"
repository = "https://github.com/daipe-ai/daipe-core"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "daipecore", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyfony-bundles = "0.4.*"
injecta = "0.10.*"
logger-bundle = "^0.7.0"
console-bundle = "^0.5"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pyre-check = "^0.9.10"
pylint = "^2.14.5"
black = "^22.0.0"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"

[tool.poetry.scripts]
daipe = "consolebundle.CommandRunner:run_command"

[tool.poetry.plugins."pyfony.bundle"]
create = "daipecore.DaipeCore:DaipeCore"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "daipecore"

[tool.black]
line-length = 140

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "wrong-import-order",
    "duplicate-code",
    "line-too-long",
    "too-many-arguments",
    "too-few-public-methods",
    "ungrouped-imports",
    "too-many-locals",
]

good-names = ["e", "i", "k", "n", "f", "v", "df"]

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint src"
